# aoc2025

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/scripts/: take_screenshot.py
.github/workflows/: update_readme.yml
.run/: Python tests in part1.py.run.xml  Python tests in part2.py.run.xml  part1.run.xml  part2.run.xml  pytest in part1.py.run.xml  pytest in part2.py.run.xml
day00/: part1.py
day01/: part1.py  part2.py
day02/: part1.py  part2.py
day03/: part1.py  part2.py
day04/: part1.py  part2.py
day05/: part1.py  part2.py
day06/: part1.py  part2.py
day07/: part1.py  part2.py
day08/: part1.py  part2.py
day09/: part1.py  part2.py
day10/: part1.py  part2.py
day11/: part1.py  part2.py
day12/: part1.py
support-src/: pyproject.toml  support.py
support_src/: support.py
