[project]
name = "aoc2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.0",
    "mypy>=1.13.0",
    "networkx>=3.4.2",
    "pytest>=8.3.4",
    "support",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "ruff>=0.8.1",
]

# --- tools configuration ---

[tool.pytest.ini_options]
python_files = "part*.py"
markers = [
    "solved: mark test as solved",
    "template: only a template"
]
addopts = "-m 'not (solved or template)' -s"


[tool.mypy]
explicit_package_bases = true
disallow_untyped_defs = true  # everything must be typed

[tool.ruff]
line-length = 100

[tool.ruff.format]
# Prefer single quotes over double quotes.
# (Ironically, this is a double-quoted string.)
quote-style = "single"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "FIX", # ignore TODOs
    "TD",  # ignore TODOs syntax
    "D104",  # Missing docstring in public package (__init__.py)
    "D203",  # 1 blank line required before class docstring, incompatible with D211
    "D213",  # multi-line-summary-second-line D212
    "S101",  # allow asserts in tests
    "T201",  # allow prints

    # ruff warning, don't format these, conflicts with linter
    "COM812", # missing-trailing-comma
    "ISC001", # single-line-implicit-string-concatenation
]

[tool.ruff.lint.isort]
force-single-line = true  # Ensures each import is on a separate line

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.per-file-ignores]
# Ignore all directories named `tests`.
"support/support.py" = [
    "D100",  # don't check docstrings
    "D101",  # ...
    "D102",  # ...
    "D103",  # ...
    "D105",  # ...
    "D107",  # ...
    "S101",  # allow asserts in tests
]

[tool.uv.sources]
support = { path = "support-src", editable = true }
